frontend/deployment/frontingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bc94-frontingress
  labels:
    name:  bc94-frontingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
   ingressClassName: nginx
   rules:
   - host: bc94frontend.zemoso.tk
     http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bc94-frontend
            port:
              number: 80
