frontend/deployment/mockingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bc94-mockingress
  labels:
    name:  bc94-mockingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
   ingressClassName: nginx
   rules:
   - host: bc94mockserver.zemoso.tk
     http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bc94-mock
            port:
              number: 5000
